# llm-as-dom

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  install.sh  lefthook.yml  release-plz.toml
.claude/agent-memory/nott-nott/: MEMORY.md  project_kata_ollama_stack_2026_04_15.md  project_lad_next_session_prompt.md
.githooks/: pre-push
.github/workflows/: bench.yml  ci.yml  fuzz.yml  manual-publish.yml  manual_pub.yml  release-binaries.yml  release-plz.yml  release.yml  security.yml
.nott/: last-session.json
.nott/hooks/: session-start.done
.nott/hooks/audit/: hooks.jsonl
.playwright-mcp/: page-2026-04-03T08-13-21-745Z.yml  page-2026-04-03T10-16-05-814Z.yml  page-2026-04-03T12-04-28-416Z.yml  page-2026-04-03T12-04-33-426Z.yml  page-2026-04-03T12-08-37-608Z.yml  page-2026-04-03T12-09-56-089Z.yml  page-2026-04-03T12-18-25-098Z.yml  page-2026-04-03T12-18-47-983Z.yml  page-2026-04-03T12-18-55-181Z.yml  page-2026-04-03T12-19-05-910Z.yml  page-2026-04-03T12-19-12-179Z.yml  page-2026-04-03T12-19-45-399Z.yml  page-2026-04-03T12-19-51-610Z.yml  page-2026-04-03T12-20-10-556Z.yml  page-2026-04-03T12-20-25-323Z.yml  page-2026-04-03T12-20-44-505Z.yml  page-2026-04-03T12-47-54-052Z.yml  page-2026-04-03T12-48-30-572Z.yml  page-2026-04-03T12-48-44-764Z.yml  page-2026-04-03T12-48-54-449Z.yml  page-2026-04-03T12-49-01-881Z.yml  page-2026-04-03T12-49-13-290Z.yml  page-2026-04-03T12-49-17-521Z.yml  page-2026-04-03T12-49-25-207Z.yml  page-2026-04-03T12-49-30-355Z.yml  page-2026-04-03T12-50-16-343Z.yml  page-2026-04-03T12-53-32-896Z.yml  page-2026-04-03T12-53-40-543Z.yml  page-2026-04-03T12-53-47-599Z.yml  page-2026-04-03T12-53-54-210Z.yml  page-2026-04-03T12-54-01-998Z.yml  page-2026-04-03T12-54-08-773Z.yml  page-2026-04-03T12-54-32-353Z.yml  page-2026-04-03T12-54-41-076Z.yml  page-2026-04-03T12-54-59-472Z.yml  page-2026-04-03T12-55-08-396Z.yml  page-2026-04-03T12-55-16-184Z.yml  page-2026-04-03T12-55-23-738Z.yml  page-2026-04-03T12-55-28-227Z.yml  page-2026-04-03T12-55-36-014Z.yml  (+7 more)
.wrangler/cache/: pages.json  wrangler-account.json
alias/crate/: Cargo.toml  README.md
alias/crate/src/: lib.rs
alias/npm/: README.md  package.json  run.js
alias/python/: README.md  pyproject.toml
alias/python/llm_as_dom/: __init__.py
bench/: run_benchmark.py
benches/: core.rs
docs/: PLAN_v0.5.md
examples/: dogfood-36.rs  test-cloak-launch.rs
fixtures/: slow.html  smoke_test.sh
fixtures/edge-cases/: chaos.html
fixtures/pages/: contenteditable.html  modal-stacking.html  spa-shell.html  twitter-edit-profile.html  twitter-profile.html
npm/: install.js  package.json  run.js
python/: pyproject.llm-as-dom-mcp.toml  pyproject.llm-as-dom.toml  pyproject.toml  update_pyproject.py
python/llm_as_dom/: README.md  pyproject.toml
python/llm_as_dom_mcp/: __init__.py  __main__.py
python/llm_as_dom_mcp_pkg/: pyproject.toml
python/menot_you_mcp_lad/: __init__.py
src/: a11y.rs  audit.rs  crypto.rs  error.rs  heuristics.rs  lib.rs  locate.rs  main.rs  mcp_server.rs  network.rs  oauth.rs  observer.rs  pilot.rs  playbook.rs  profile.rs  sanitize.rs  selector.rs  semantic.rs  session.rs  target.rs  watch.rs
src/backend/: anthropic.rs  generic.rs  mod.rs  ollama.rs  openai.rs  playbook.rs  zai.rs
src/engine/: chromium.rs  cloak_bootstrap.rs  mod.rs  stealth.rs  webkit.rs  webkit_proto.rs
src/heuristics/: ecommerce.rs  form.rs  hints.rs  login.rs  mfa.rs  mod.rs  multistep.rs  navigation.rs  oauth.rs  search.rs  selector.rs  validation.rs
src/mcp_server/: assertions.rs  helpers.rs  mod.rs  params.rs  state.rs  tests.rs
src/mcp_server/tools/: browse.rs  debug.rs  extract.rs  form.rs  interact.rs  lifecycle.rs  mod.rs  nav.rs  scroll.rs  tabs.rs  upload.rs  verify.rs  watch.rs
src/pilot/: action.rs  captcha.rs  decide.rs  mod.rs  runner.rs  util.rs
src/relay/: discovery.rs  main.rs  qr.rs  token.rs
swift/LADRemote/.build/: build.db  debug.yaml
swift/LADRemote/.build/arm64-apple-macosx/debug/: plugin-tools-description.json
swift/LADRemote/.build/arm64-apple-macosx/debug/LADRemote.build/: BridgeEngine.d  BridgeEngine.dia  BridgeEngine.swiftdeps  BridgeProtocol.d  BridgeProtocol.swiftdeps  LADRemote.emit-module.d  RelayConnection.d  RelayConnection.swiftdeps  RemoteBridgeView.d  RemoteBridgeView.swiftdeps  RemoteBridgeViewModel.d  RemoteBridgeViewModel.swiftdeps  output-file-map.json  primary.priors  sources
swift/LADRemote/.build/arm64-apple-macosx/debug/Modules/: LADRemote.swiftdoc  LADRemote.swiftmodule  LADRemote.swiftsourceinfo
swift/LADRemote/Sources/LADRemote/: BridgeEngine.swift  BridgeProtocol.swift  RelayConnection.swift  RemoteBridgeViewModel.swift
tests/: chaos.rs  integration.rs  playbook_learning.rs  prompt_injection_hidden.rs  webkit_integration.rs
webkit-bridge/.build/: build.db  plugin-tools.yaml
webkit-bridge/.build/arm64-apple-macosx/debug/: lad-webkit-bridge  plugin-tools-description.json
webkit-bridge/.build/arm64-apple-macosx/debug/ModuleCache/2PF918W08Y06V/: Accessibility-RCJSN2GG3RAR.pcm  ApplicationServices-3NXEUUZF9JJBD.pcm  CFNetwork-1PNPO1ORVQZLS.pcm  CUPS-1HLHMKUB322XA.pcm  Cocoa-1MK6YYY84V08M.pcm  ColorSync-3EIM4S8RXNRVI.pcm  CoreData-1KHK1L2CYC2N6.pcm  CoreFoundation-16SA8WK3L6MQN.pcm  CoreGraphics-1PSDCAYCIV3T9.pcm  CoreImage-39ZO87840M5PP.pcm  CoreText-3FAL1B4J38DIR.pcm  CoreTransferable-27T896KGHFB3R.pcm  CoreVideo-DBBGB2LXU3HG.pcm  DataDetection-R5W4QHNMPWVH.pcm  (+47 more)
webkit-bridge/.build/arm64-apple-macosx/debug/Modules/: lad_webkit_bridge.swiftdoc  lad_webkit_bridge.swiftmodule  lad_webkit_bridge.swiftsourceinfo
webkit-bridge/.build/arm64-apple-macosx/debug/lad-webkit-bridge.product/: Objects.LinkFileList
webkit-bridge/.build/arm64-apple-macosx/debug/lad_webkit_bridge.build/: lad_webkit_bridge.emit-module.d  main.d  main.swiftdeps  output-file-map.json  primary.priors  sources
webkit-bridge/Sources/: main.swift
website/: index.html  package-lock.json  package.json  styles.css
website-vanilla/: index.html
website/src/: App.tsx  index.css
website/src/components/: LogoSticker.tsx
(+273 files in other folders)
