[package]
name = "menot-you-mcp-lad"
version = "0.7.0"
edition = "2024"
description = "AI browser pilot — test your app 60x cheaper. Heuristics + cheap LLM navigate so expensive models never parse HTML."
license = "AGPL-3.0-or-later"
repository = "https://github.com/menot-you/llm-as-dom"
homepage = "https://github.com/menot-you/llm-as-dom"
readme = "README.md"
keywords = ["browser", "automation", "mcp", "ai-agent", "headless"]
categories = ["development-tools::testing", "web-programming"]
exclude = ["assets/", "fixtures/", "bench/", "docs/", "demo.tape", "README.md.bak", ".github/", ".githooks/"]

[lib]
name = "llm_as_dom"
path = "src/lib.rs"

[[bin]]
name = "lad"
path = "src/main.rs"

[[bin]]
name = "llm-as-dom-mcp"
path = "src/mcp_server/mod.rs"

[dependencies]
# Browser (CDP)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Ollama API)
reqwest = { version = "0.12", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP (Model Context Protocol)
rmcp = { version = "1.3", features = ["server", "transport-io"] }

# Base64 encoding (screenshots)
base64 = "0.22"

# SQLite (Chrome cookie extraction)
rusqlite = { version = "0.33", features = ["bundled"] }

# Cookie decryption (Chrome Safe Storage)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha1 = { version = "0.10", default-features = false }

# URL parsing (SSRF protection in sanitize module)
url = "2"

# Misc
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "core"
harness = false
