[package]
name = "example-org-mcp-lad"
version = "0.10.0"
edition = "2024"
description = "AI browser pilot — test your app 60x cheaper. Heuristics + cheap LLM navigate so expensive models never parse HTML."
license = "AGPL-3.0-or-later"
repository = "https://github.com/example-org/llm-as-dom"
homepage = "https://github.com/example-org/llm-as-dom"
readme = "README.md"
keywords = ["browser", "automation", "mcp", "ai-agent", "headless"]
categories = ["development-tools::testing", "web-programming"]
exclude = ["assets/", "fixtures/", "bench/", "docs/", "demo.tape", "README.md.bak", ".github/", ".githooks/"]

[lib]
name = "llm_as_dom"
path = "src/lib.rs"

[[bin]]
name = "lad"
path = "src/main.rs"

[[bin]]
name = "llm-as-dom-mcp"
path = "src/mcp_server/mod.rs"

[[bin]]
name = "lad-relay"
path = "src/relay/main.rs"

[dependencies]
# Browser (CDP)
# NOTE: chromiumoxide pulls async-std transitively (RUSTSEC-2025-0052).
# Track chromiumoxide releases for an upgrade that drops async-std. (FIX-R3-09)
chromiumoxide = { version = "0.8", features = ["tokio-runtime"] }
futures = "0.3"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client (Ollama API)
reqwest = { version = "0.13", features = ["json"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# MCP (Model Context Protocol)
rmcp = { version = "1.3", features = ["server", "transport-io"] }

# Base64 encoding (screenshots)
base64 = "0.22"

# SQLite (Chrome cookie extraction)
rusqlite = { version = "0.39", features = ["bundled"] }

# Cookie decryption (Chrome Safe Storage)
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
pbkdf2 = { version = "0.12", features = ["hmac"] }
sha1 = { version = "0.11", default-features = false }

# URL parsing (SSRF protection in sanitize module)
url = "2"

# Regex (case-insensitive injection pattern matching, FIX-6)
regex = "1"

# Cryptographic hashing (FIX-13: audit trail for lad_eval scripts)
sha2 = "0.11"

# CSPRNG for prompt boundary generation (FIX-R3-06)
getrandom = "0.4"

# Secure temp directory creation (FIX-R3-12)
tempfile = "3"

# WebSocket (relay transport)
tokio-tungstenite = "0.29"

# QR code rendering (relay terminal output)
qrcode = "0.14"

# Bonjour/mDNS discovery (relay)
mdns-sd = "0.19"
flume = "0.12"
hostname = "0.4"
http = "1"

# Misc
async-trait = "0.1"
thiserror = "2"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
proptest = "1"

[[bench]]
name = "core"
harness = false
