[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm-as-dom-mcp"
version = "0.0.0.dev0"
description = "AI browser pilot — test your app 60x cheaper. MCP server binary wrapper."
readme = "../README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
keywords = ["browser", "automation", "mcp", "ai-agent", "headless", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/example-org/llm-as-dom"
Repository = "https://github.com/example-org/llm-as-dom"

[project.scripts]
llm-as-dom-mcp = "llm_as_dom_mcp:main"
