[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "menot-you-mcp-lad"
version = "0.12.0"
description = "AI browser pilot — test your app 60x cheaper. MCP server binary wrapper."
readme = "../README.md"
license = "AGPL-3.0-or-later"
requires-python = ">=3.9"
keywords = ["browser", "automation", "mcp", "ai-agent", "headless", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/menot-you/llm-as-dom"
Repository = "https://github.com/menot-you/llm-as-dom"

[project.scripts]
mcp-lad = "menot_you_mcp_lad:main"

[tool.hatch.build.targets.wheel]
packages = ["menot_you_mcp_lad"]
