[package]
name = "llm-as-dom"
version = "0.9.0"
edition = "2024"
description = "AI browser pilot — test your app 60x cheaper. Heuristics + cheap LLM navigate so expensive models never parse HTML. (Alias for example-org-mcp-lad)"
license = "AGPL-3.0-or-later"
repository = "https://github.com/example-org/llm-as-dom"
homepage = "https://github.com/example-org/llm-as-dom"
readme = "README.md"
keywords = ["browser", "automation", "mcp", "ai-agent", "headless"]
categories = ["development-tools::testing", "web-programming"]

[lib]
name = "llm_as_dom_alias"

[dependencies]
example-org-mcp-lad = { version = "=0.9.0", package = "example-org-mcp-lad" }
